--- a/Ats.Gop/Ats.Gop.csproj
+++ b/Ats.Gop/Ats.Gop.csproj
@@ -96,6 +96,9 @@
       <DependentUpon>AtsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Data\EncryptedConstants.cs" />
+    <Compile Include="EmailAnnouncementDefinition.cs">
+      <DependentUpon>AtsModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="ExceptionLog.cs">
       <DependentUpon>AtsModel.tt</DependentUpon>
     </Compile>
